# ecoci

./: .ai-catalog-mapping.json  .gitignore  .gitlab-ci.yml  ANTHROPIC_INTEGRATION.md  AUTOMATION_STATUS.md  BEGINNER_GUIDE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLOUD_INTEGRATION.md  CODE_PERFORMANCE_ANALYSIS.md  Dockerfile  GCP_QUICKSTART.md  GCP_SETUP_COMPLETE.md  OPTIMIZATION_GUIDE.md  PRIZE_STRATEGY.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
.gitlab/agents/: carbon-calculator.yml  ecocl-flow.yml  mr-creator.yml  optimizer.yml  pipeline-analyzer.yml
.gitlab/merge_request_templates/: ecoci_optimization.md
agents/: agent.yml  carbon-calculator.yml  mr-creator.yml  optimizer.yml  pipeline-analyzer.yml
demo/: DEMO_GUIDE.md  bad-gitlab-ci.yml  optimized-gitlab-ci.yml
ecoci-demo-problem-project/: .gitlab-ci.yml  Dockerfile  README.md  package.json
ecoci-demo-problem-project/src/: index.js  index.test.js
ecoci-test-project/: .gitlab-ci.yml  README.md  package.json
ecoci-test-project/src/: index.js  index.test.js
flows/: ecocl-flow.yml  flow.yml
scripts/: build_release_artifacts.sh  deploy_cloud_run.sh  insert_sample_data.py  package_vscode_extension.sh  setup_bigquery.sh  test_all_modules.py  test_business_value.py  test_performance_analyzer.py
scripts/ecoci/: __init__.py  auto_fix_engine.py  carbon_calculator.py  ci_analyzer.py  cli.py  code_performance_analyzer.py  config.py  cost_analyzer.py  dora_metrics.py  failure_predictor.py  flaky_test_detector.py  gcp_config.json  gcp_integration.py  gitlab_client.py  main.py  (+6 more)
website/: downloads.html  examples.html  index.html  media.html  quickstart.html
(+7 files in other folders)
