[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoci"
version = "1.0.0"
description = "The most comprehensive AI CI/CD optimizer — 15+ analysis modules for any CI system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Divyansh Agarwal", email = "divyansh@ecoci.dev"}
]
keywords = ["cicd", "devops", "carbon", "optimization", "security", "dora", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-bigquery>=3.20.0",
    "google-auth>=2.20.0",
]
all = [
    "google-cloud-bigquery>=3.20.0",
    "google-auth>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/divyanshAgarwal123/ecoci"
Repository = "https://github.com/divyanshAgarwal123/ecoci"
Issues = "https://github.com/divyanshAgarwal123/ecoci/issues"

[project.scripts]
ecoci = "ecoci.cli:main"

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.setuptools.package-dir]
"" = "scripts"
